--- a/NavigationDrawer/app/src/main/res/values/strings.xml
+++ b/NavigationDrawer/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
+    <string name="main_url">http://hufstory.co.kr</string>
+    <string name="facebook_url">https://www.facebook.com/storyhufs/</string>
 
     <string-array name="board">
         <item>공지사항</item>
